@@ -1,4 +1,4 @@
-<<$Id: HISTORY,v 1.37 2008/06/30 20:51:31 mitch Exp $>>
+<<$Id: HISTORY,v 1.38 2008/07/11 20:12:25 mitch Exp $>>
 
 
 gbsplay HISTORY
@@ -22,6 +22,7 @@ Enhancements:
 
 - gbsplay
   - more accurate handling of channel 3 and master volume
+  - add MIDI plugout
 
 - contrib:
   - clarify license of gbs2ogg.sh (it's GPL'ed)
